  Inserate Mark und Verzeichnis.
- Das Versenden von E-Mails bei der Verwendung eines separaten SMTP-Servers
  funktioniert.
- Bei der Inhaltsnavigation wird beim Typ 'dropdown' ab der zweiten Ebene
  auch ein CSS-Style (active/inactive) ausgegeben.
- Die Inhaltsnavigation wird bei einer Designvorschau angezeigt.
- Erstellung des XML Sitemaps funktioniert besser.

Alias Verwaltung
- Aliase welche Leerzeichen enthalten werden in der Inhalts-Navigation
  korrekt ausgegeben.

Block System
- Das Interface zur Auswahl der Frontend Seiten funktioniert korrekt.
- Inhaltsplatzhalter werden beim Bearbeiten eines Blocks angezeigt.

Benutzerverwaltung
- Geburtstage zwischen dem 10. Februar 1653 und dem 16. November 5138 können
  erfasst werden.
- Beim Export werden Benutzer, welche als Frontend Sprache die Standard
  Sprache ausgewählt haben beim entsprechenden Export auch mit exportiert.
- Der Gruppenfilter bei der Auflistung der Benutzer im Frontend funktioniert.
- Ein Benutzer kann nur authentifiziert werden, sofern er bei mindestens einer
  aktiven Gruppe Mitglied ist.
- Beim Speichern einer Benutzergruppe gehen die Modul-Spezifischen Berechtigungen
  nicht verloren.
- Die Funktion "Kennwort Zurücksetzen" funktioniert mit Benutzern, welche
  automatisch über den Online Shop erstellt wurden.

FileBrowser
- Die Bild-Vorschau funktioniert bei Bildern mit Sonderzeichen im Dateinamen.

News Manager
- Das Bearbeiten einer Nachricht ohne Administrator Rechte funktioniert.
- Der Besitzer einer Newsmeldung kann immer auf diese Zugreifen, auch wenn
  diese geschützt ist und er sich kein expliziter Zugriff erteilt hat.
- Die Meldungen werden in der Administrationskonsole korrekt aufgelistet,
  wenn die Erweiterung 'Zugriffsschutz' aktiviert ist.
- Der JavaScript RSS Feed news_de.js funktioniert korrekt.
- Ein Thumbnail einer News Meldung wird auch dann angezeigt, wenn kein
  normales Bild definiert wurde.

Volltextsuche